# dsp-

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  README.txt  android-build  distelli-manifest.yml.bak  dsp++-config.cmake.in  dsp++-vc12.sln
ci/: build-deps.sh  install-deps.android.sh  install-deps.linux.sh  install-deps.osx.sh  install-deps.windows.sh  install-test-deps.linux.sh  install-test-deps.osx.sh  install-test-deps.windows.sh
cmake/: BoostOnMSVC.cmake  CMakeCompatibility.cmake  CopyDll.cmake  CopyDlls.cmake  FindFFTW3.cmake  FindLIBSNDFILE.cmake
compressor_demo/: CMakeLists.txt  main.cpp
dsp++/: .cproject  .gitignore  CMakeLists.txt  Makefile  TargetPlatform.cmake  doxyfile  doxyfile.in  dsp++-vc12.vcxproj  dsp++.vcxproj  dsp++.vcxproj.filters
dsp++/android/jni/: Android.mk  Application.mk
dsp++/cmake/: FindFFTW3.cmake  FindLibSndfile.cmake  TargetPlatform.cmake
dsp++/doc/: CMakeLists.txt
dsp++/include/dsp++/: adaptfilt.h  algorithm.h  buffer.h  buffer_traits.h  compat.h  complex.h  concept_checks.h  config.h  const.h  csv.h  csvread.h  debug.h  dft.h  doc.h  dynamics.h  export.h  fdaf.h  fft.h  filter.h  filter_design.h  fixed.h  float.h  intmath.h  levinson.h  lpc.h  mean.h  noncopyable.h  norm.h  overlap_add.h  overlap_save.h  platform.h  pow2.h  resample.h  simd.h  stdint.h  stride.h  stride_iterator.h  trivial_array.h  types.h  utility.h  (+2 more)
dsp++/include/dsp++/compat/: enum_class.h
dsp++/include/dsp++/fft/: detail.h
dsp++/include/dsp++/fftw/: allocator.h  dft.h  plan_unavailable.h  traits.h
dsp++/include/dsp++/flt/: biquad_design.h  fir_design.h  iir_design.h
dsp++/include/dsp++/snd/: buffer.h  channel.h  convert.h  format.h  io.h  io_error.h  iobase.h  loudness.h  property.h  reader.h  sample.h  sndfile_error.h  writer.h
dsp++/include/dsp++/snd/lame/: error.h  writer.h
dsp++/include/dsp++/snd/mpeg/: property.h
dsp++/include/dsp++/snd/mpg123/: error.h  reader.h
dsp++/include/dsp++/snd/sndfile/: error.h  file.h  iobase.h  reader.h  writer.h
dsp++/src/: csv.cpp  csvread.cpp  fft.cpp  filter.cpp  flt_fs.cpp  flt_iir.cpp  flt_pm.cpp  pch.cpp  pch.h  sample.cpp  simd.cpp  utility.h  vectmath.cpp  version.cpp  version.h.in  zeropole.cpp
dsp++/src/arch/arm/: cpu_arm.cpp
dsp++/src/arch/ppc/: cpu_ppc.cpp
dsp++/src/arch/x86/: cpu_x86.cpp  sse.cpp  sse3.cpp  sse41.cpp
dsp++/src/fftw/: traits.cpp
dsp++/src/rpoly/: rpoly.cpp
dsp++/src/snd/: channel.cpp  format.cpp  io.cpp  lame_api.cpp  loudness.cpp  mpg123_api.cpp  property.cpp  sample.cpp  sndfile_api.cpp
dsp++/test/: CMakeLists.txt  adaptfilt_test.cpp  fft_test.cpp  filter_design_test.cpp  filter_test.cpp  intmath_test.cpp  lattice_test.cpp  levinson_test.cpp  loudness_test.cpp  lpc_test.cpp  main.cpp  mean_test.cpp  overlap_add_test.cpp  pow2_test.cpp  resample_test.cpp  simd_test.cpp  test_adaptfilt.cpp  test_fft.cpp  test_filter.cpp  test_filter_design.cpp  test_lame_api.cpp  test_lattice.cpp  test_mean.cpp  test_mpg123_api.cpp  test_overlap_add.cpp  test_resample.cpp  test_simd.cpp  test_snd_channel.cpp  test_snd_format.cpp  test_snd_io.cpp  test_snd_loudness.cpp  test_snd_sample.cpp  test_sndfile_api.cpp  test_utility.h  test_window.cpp  utility.cpp  warn_push.h  window_test.cpp  xcorr_test.cpp
dsp++/test/data/: 1s_sweep.aif
filter_demo/: CMakeLists.txt  main.cpp
multiband_compressor/include/dsp++/rt/: multiband_compressor.h
multiband_compressor/src/: multiband_compressor.cpp
